New logo, golfid collect, cleanup

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,9 @@
   $green-light: #94DFC0;
   $grey: #888888;
   $grey-light: #ddd;
+  $blue: #69b3fe;
+  $blue-light: #5b75af;
 
-  $orange: #FD8204;
+  $orange: #fd9b37;
 
   $red: #F96E80;
