Styling scoring+numpad

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,10 +5,15 @@
   $grey-light: #ddd;
   $blue: #69b3fe;
   $blue-light: #5b75af;
+  $masters-green: #195a3a;
 
   $orange: #fd9b37;
+  $team1: #fd9b37;
+  $team2: #69b3fe;
 
   $red: #F96E80;
 
   $success: #28a745;
   $light: #f8f9fa;
+
+  
