--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@
   $green-light: #94DFC0;
   $grey: #888888;
   $grey-light: #ddd;
-  $blue: #69b3fe;
+  $blue: #007bff;
   $blue-light: #5b75af;
   $masters-green: #195a3a;
 
