scorecard fixup design

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,8 @@
   $grey-light: #ddd;
   $blue: #007bff;
   $blue-light: #5b75af;
-  $masters-green: #195a3a;
+  $masters-greenOLD: #195a3a;
+  $masters-green: #286245;
 
   $orange: #fd9b37;
   $team1: #fd9b37;
