igg first draft

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@
   $grey: #888888;
   $grey-light: #ddd;
   $blue: #007bff;
+  $igg: #f28349;
   $blue-light: #5b75af;
   $masters-greenOLD: #195a3a;
   $masters-green: #286245;
