--- a/static/all.css
+++ b/static/all.css
@@ -510,6 +510,10 @@ readers do not read off random characters that represent icons */
 .fa-arrows:before {
   content: "\f047"; }
 
+  .fa-arrows-rotate:before {
+    content: "\f021"; }
+  
+
 .fa-arrows-alt:before {
   content: "\f0b2"; }
 
